@@ -21,6 +21,8 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+TAO_BEGIN_VERSIONED_NAMESPACE_DECL
+
 /**
  * @class TAO_Asynch_Queued_Message
  *
@@ -96,6 +98,8 @@ private:
   /// The buffer containing the complete message.
   char *buffer_;
 };
+
+TAO_END_VERSIONED_NAMESPACE_DECL
 
 #include /**/ "ace/post.h"
 #endif  /* TAO_ASYNCH_QUEUED_MESSAGE_H */
