@@ -1,3 +1,12 @@
+Thu Dec  8 07:17:36 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/Asynch_Queued_Message.h:
+	* tao/default_server.h:
+	* tao/PortableServer/Operation_Table_Binary_Search.h:
+
+	  Fixed versioned namespace support.  The versioning macros calls
+	  were missing.
+
 Thu Dec  8 06:54:31 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* orbsvcs/examples/LoadBalancing/ServerRequestInterceptor.h:
